Fix scrollbar background

--- a/src/styles/scrollbar.scss
+++ b/src/styles/scrollbar.scss
@@ -30,7 +30,7 @@
   background-color: rgba(var(--scrollbar-thumb-color, 0, 0, 0), 0.66);
 }
 ::-webkit-scrollbar-track:hover {
-  background-color: rgba(var(--scrollbar-track-color, 220, 220, 220), 0.66);
+  background-color: #181826;
 }
 
 /* set button(top and bottom of the scrollbar) */
